# chess

./: Cargo.toml
ai/: Cargo.toml
ai/src/: lib.rs
ai/src/evaluators/: mod.rs  simple.rs
ai/src/search_algorithms/: mod.rs
ai/src/search_algorithms/iterative_deepening/: iterator.rs  mod.rs
arr_deque/: Cargo.toml
arr_deque/src/: arr_deque.rs  lib.rs
chess/: Cargo.toml
chess/src/: arr_deque.rs  bitboard.rs  board.rs  chess_move.rs  lib.rs  main.rs  piece.rs  possible_moves.rs
chess/src/board/: acn_move_err.rs  mod.rs  move_err.rs  undoable_move.rs
chess/src/iterative_deepening/: iterator.rs  mod.rs
chess/src/legal_moves/: mod.rs
chess/src/legal_moves/bishop/: all_iterator.rs  legal_iterator.rs  mod.rs
chess/src/legal_moves/king/: captures_at_location.rs  check_blocking_squares.rs  king_protecting_pieces.rs  legal_moves.rs  mod.rs
chess/src/legal_moves/knight/: all_iterator.rs  legal_iterator.rs  mod.rs
chess/src/legal_moves/pawn/: mod.rs  pawn_moves.rs
chess/src/legal_moves/queen/: legal_iterator.rs  mod.rs
chess/src/legal_moves/rook/: all_iterator.rs  legal_iterator.rs  mod.rs
chess/src/moves/: mod.rs  move_.rs  possible_move.rs  selected_move.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: file.rs  lib.rs  location.rs  piece.rs  piece_kind.rs  player.rs  prelude.rs  rank.rs
encoder/: Cargo.toml
encoder/src/: lib.rs
frontend/: game.html  index.html
parsers/: Cargo.toml  pgn_spec.html
parsers/src/: acn_parser.rs  fen_parser.rs  lib.rs  pgn_parser.rs
parsers/src/fen/: fen_parser.rs  mod.rs  piece_locations.rs
site/: Cargo.toml  Dockerfile  docker-compose.yml
site/migrations/: 202405261522_setup.sql
site/src/: main.rs
site/src/api/: mod.rs
site/src/api/v0/: mod.rs
site/src/auth/: mod.rs  user.rs
site/src/auth/crypt/: mod.rs
site/src/chess_html/: game_board.rs  mod.rs  svg.rs
site/src/chess_html/v0/: mod.rs
site/src/common/: fen_request.rs  mod.rs  request.rs
site/src/scripts/: app.js
site/src/styles/: app.css
