[workspace]
resolver = "2"
members = [
    "ai",
    "arr_deque",
    "site",
    "encoder",
    "common",
    "chess",
    "parsers",
    "cli"
]

[workspace.dependencies]
iso_8859_1_encoder = { path = "./encoder" }
arr_deque = { path = "./arr_deque" }
chess_parsers = { path = "./parsers" }
chess_core = { path = "./chess" }
chess_common = { path = "./common" }
