[package]
name = "chess_ai"
version = "0.1.0"
edition = "2021"
publish = ["gitea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# game logic
chess_common = { workspace = true }
chess_core = { workspace = true }
chess_parsers = { workspace = true }

streaming-iterator = "0.1"
