[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[env]
RUST_LOG = "DEBUG"

[dependencies]
chess_common = { path = "../common" }
chess_parsers = { path = "../parsers" }
log = "0.4"
env_logger = "0.11.3"
tree_iterators_rs = "1.2.1"
simpleml = "1.0.1"