[package]
name = "chess_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[env]
RUST_LOG = "DEBUG"

[dependencies]
arr_deque = { path = "../arr_deque" }
iso_8859_1_encoder = { path = "../encoder" }
chess_common = { path = "../common" }
chess_parsers = { path = "../parsers" }
streaming-iterator = "0.1"
tree_iterators_rs = "1.2.1"

serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
whitespacesv = "1.0"