[package]
name = "chess_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
arr_deque = { workspace = true }
iso_8859_1_encoder = { workspace = true }
chess_common = { workspace = true }
chess_parsers = { workspace = true }
streaming-iterator = "0.1"

serde = "1.0"
serde_derive = "1.0"
