[package]
name = "pgndb"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5.41", features = ["cargo"] }
log = "0.4.26"
env_logger = "0.11.8"
codespan-reporting = "0.12.0"
chess_parsers = { path = "../parsers" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
chess_core = { workspace = true }
chess_common = { workspace = true }
iso_8859_1_encoder = { workspace = true }
