[package]
name = "chess-site"
version = "0.1.0"
edition = "2021"
publish = ["gitea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0" 
axum = "0.7.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenvy = "0.15"
