[package]
name = "chess-site"
version = "0.1.0"
edition = "2021"
publish = ["gitea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# game logic
chess_common = { path = "../common" }
chess_core = { path = "../chess" }
chess_parsers = { path = "../parsers" }

streaming-iterator = "0.1"

# web
http = "1.0"
axum = "0.8.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower-cookies = { version = "0.10" }

# async run time
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

# time handling
chrono = "0.4"

# HTML templating
html-to-string-macro = "0.2"

uuid = { version = "1.8", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }

# .env file interaction
dotenvy = "0.15"

# serialization/deserialization
serde = { version = "1.0", features = ["derive"] }

# encryption/encodings
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "3.0"
